--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "db:seed": "node scripts/seed.mjs"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "db:seed": "node scripts/seed.mjs",
+    "check:knip": "knip",
+    "check:tsprune": "ts-prune -p tsconfig.json",
+    "check:unimported": "unimported",
+    "check:deps": "depcheck --skip-missing=true"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -28,10 +33,15 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "depcheck": "^1.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "knip": "^5.63.0",
     "prisma": "^6.14.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-prune": "^0.10.3",
+    "typescript": "^5",
+    "unimported": "^1.31.0"
   }
 }
