--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate:deploy": "prisma migrate deploy",
     "dev": "next dev",
     "build": "next build",
+    "vercel-build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -19,32 +20,34 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@prisma/client": "6.15.0",
+    "@prisma/client": "^6.15.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
-    "next": "15.5.0",
+    "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "preact-render-to-string": "6.6.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "depcheck": "^1.4.7",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
+    "eslint-config-next": "15.5.2",
     "eslint-plugin-unused-imports": "^4.2.0",
     "knip": "^5.63.0",
-    "prisma": "6.15.0",
+    "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "ts-prune": "^0.10.3",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5",
-    "unimported": "^1.31.0"
+    "unimported": "^1.31.1"
   }
 }
