--- a/package.json
+++ b/package.json
@@ -6,29 +6,41 @@
     "postinstall": "prisma generate",
     "prebuild": "prisma generate",
     "migrate:deploy": "prisma migrate deploy",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
+    "dev:fast": "NEXT_CONFIG_FILE=next.config.ultra-fast.mjs next dev --turbopack",
     "build": "next build",
     "vercel-build": "prisma generate && next build",
     "start": "next start",
+    "start:standalone": "node .next/standalone/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "db:seed": "node scripts/seed.mjs",
+    "reset:qbank": "node scripts/reset-qbank.mjs",
     "check:knip": "knip",
     "check:tsprune": "ts-prune -p tsconfig.json",
     "check:unimported": "unimported",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "check:deps": "depcheck --skip-missing=true"
-    
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.15.0",
+    "@tiptap/extension-image": "^3.4.3",
+    "@tiptap/extension-table": "^3.4.3",
+    "@tiptap/extension-table-cell": "^3.4.3",
+    "@tiptap/extension-table-header": "^3.4.3",
+    "@tiptap/extension-table-row": "^3.4.3",
+    "@tiptap/pm": "^3.4.3",
+    "@tiptap/react": "^3.4.3",
+    "@tiptap/starter-kit": "^3.4.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
+    "pdf-parse": "^1.1.1",
+    "pdf2pic": "^3.2.0",
     "preact-render-to-string": "6.6.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
@@ -41,18 +53,19 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "depcheck": "^1.4.7",
+    "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "ignore-loader": "^0.1.2",
     "knip": "^5.63.0",
+    "openai": "^5.23.0",
     "prisma": "^6.15.0",
     "tailwindcss": "^4",
+    "tiktoken": "^1.0.22",
     "ts-prune": "^0.10.3",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5",
     "unimported": "^1.31.1"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.cjs"
   }
 }
