Comprehensive Prisma engine fix for Vercel - Add multiple binaryTargets, custom generate script, and webpack config

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
-    "prebuild": "prisma generate",
+    "prebuild": "node scripts/prisma-generate.mjs",
     "migrate:deploy": "prisma migrate deploy",
     "dev": "next dev --turbopack",
     "dev:fast": "NEXT_CONFIG_FILE=next.config.ultra-fast.mjs next dev --turbopack",
     "build": "next build",
-    "vercel-build": "prisma generate && next build",
+    "vercel-build": "node scripts/prisma-generate.mjs && next build",
     "start": "next start",
     "start:standalone": "node .next/standalone/server.js",
     "lint": "eslint .",
