--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
   "installCommand": "npm install",
   "outputDirectory": ".next",
   "regions": ["iad1"],
+  "env": {
+    "PRISMA_CLI_QUERY_ENGINE_TYPE": "binary",
+    "PRISMA_GENERATE_SKIP_DOWNLOAD": "false"
+  },
   
   "headers": [
     {
