Fix Prisma binary targets for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
   "regions": ["iad1"],
   "env": {
     "PRISMA_CLI_QUERY_ENGINE_TYPE": "binary",
-    "PRISMA_GENERATE_SKIP_DOWNLOAD": "false"
+    "PRISMA_GENERATE_SKIP_DOWNLOAD": "false",
+    "PRISMA_SKIP_POSTINSTALL_GENERATE": "false"
   },
   
   "headers": [
