--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
   "outputDirectory": ".next",
   "regions": ["iad1"],
   "env": {
-    "PRISMA_CLI_QUERY_ENGINE_TYPE": "binary",
+    "PRISMA_CLI_QUERY_ENGINE_TYPE": "library",
     "PRISMA_GENERATE_SKIP_DOWNLOAD": "false",
     "PRISMA_SKIP_POSTINSTALL_GENERATE": "false"
   },
