--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
     "@prisma/client": "^6.16.3",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@tiptap/extension-image": "^3.4.3",
     "@tiptap/extension-table": "^3.4.3",
     "@tiptap/extension-table-cell": "^3.4.3",
