--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@prisma/client": "^6.16.3",
     "@prisma/extension-accelerate": "^2.0.2",
-    "@tiptap/extension-image": "^3.4.3",
-    "@tiptap/extension-table": "^3.4.3",
-    "@tiptap/extension-table-cell": "^3.4.3",
-    "@tiptap/extension-table-header": "^3.4.3",
-    "@tiptap/extension-table-row": "^3.4.3",
-    "@tiptap/pm": "^3.4.3",
-    "@tiptap/react": "^3.4.3",
-    "@tiptap/starter-kit": "^3.4.3",
+    "@tiptap/core": "^3.6.5",
+    "@tiptap/extension-image": "^3.6.5",
+    "@tiptap/extension-table": "^3.6.5",
+    "@tiptap/extension-table-cell": "^3.6.5",
+    "@tiptap/extension-table-header": "^3.6.5",
+    "@tiptap/extension-table-row": "^3.6.5",
+    "@tiptap/extension-text-align": "^3.6.5",
+    "@tiptap/extension-underline": "^3.6.5",
+    "@tiptap/pm": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
